# procex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.hs  flake.nix  procex.cabal  procex.nix  shell.nix
Procex/: Core.hs  Execve.hs  Prelude.hs  Process.hs  Quick.hs  Shell.hs
Procex/Shell/: Labels.hs
cbits/: glue.c
example-shell/: ShellRC.hs  default.nix
