cabal-version:      2.4
name:               procex
version:            0.1.0.0

synopsis: Ergonomic process launching with pipes, etc.

bug-reports: https://github.com/L-as/procex

license-files:      LICENSE
license:            Apache-2.0
author:             Las Safin
maintainer:         las@protonmail.ch

category:           System
extra-source-files: CHANGELOG.md

library
  exposed-modules: Procex.Prelude, Procex.Core, Procex.Process, Procex.Execve, Procex.Quick, Procex.Shell

  default-extensions:
    OverloadedStrings,
    OverloadedLists,
    NamedFieldPuns,
    RecordWildCards,
    LambdaCase,
    ScopedTypeVariables,
    FlexibleInstances,
    GADTs
  build-depends:
    base ^>= 4.14.1,
    bytestring ^>= 0.10.12,
    unix ^>= 2.7.2,
    utf8-string ^>= 1.0.2,
    async ^>= 2.2.3,
    containers ^>= 0.6.2
  default-language: Haskell2010
  ghc-options: -Wall -Wno-name-shadowing
  c-sources: cbits/glue.c

Test-Suite example
  type: exitcode-stdio-1.0
  main-is: example.hs
  default-language: Haskell2010
  build-depends: base, procex
  ghc-options: -Wall -Wno-name-shadowing
