cabal-version:      2.4
name:               procex
version:            0.3.2

synopsis: Ergonomic process launching with extreme flexibility and speed
description:
  procex is a library for launching unix processes, that DOES NOT wrap createProcess.
  It interfaces directly with vfork and execve, and closes fds efficiently using
  the new close_range Linux syscall (or close if not available).
  The syntax for launching processes is clean, concise, and flexible, mimicking sh.

bug-reports: https://github.com/L-as/procex

license-files:      LICENSE
license:            MIT
author:             Las Safin
maintainer:         me@las.rs

category:           System, Shell
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/L-as/procex

library
  exposed-modules: Procex.Prelude, Procex.Core, Procex.Process, Procex.Execve, Procex.Quick, Procex.Shell, Procex.Shell.Labels

  default-extensions:
    OverloadedStrings,
    OverloadedLists,
    NamedFieldPuns,
    RecordWildCards,
    LambdaCase,
    ScopedTypeVariables,
    FlexibleInstances,
    MultiParamTypeClasses,
    GADTs
  build-depends:
    base >= 4.14.1 && < 4.16,
    bytestring >= 0.10.12 && < 0.12,
    unix ^>= 2.7.2,
    utf8-string ^>= 1.0.2,
    async ^>= 2.2.3,
    containers ^>= 0.6.2,
    deepseq ^>= 1.4.4
  default-language: Haskell2010
  ghc-options: -Wall -Wno-name-shadowing
  c-sources: cbits/glue.c

Test-Suite example
  type: exitcode-stdio-1.0
  main-is: example.hs
  default-language: Haskell2010
  build-depends:
    base,
    procex,
    async,
    unix,
    hspec >= 2.7 && < 2.9,
    bytestring
  ghc-options: -threaded -Wall -Wno-name-shadowing

--Test-Suite shell
--  build-depends:
--    base,
--    procex,
--    async,
--    utf8-string,
--    replace-megaparsec ^>= 1.4.4,
--    bytestring,
--    directory
--  default-extensions:
--    ExtendedDefaultRules,
--    OverloadedStrings
--  default-language: Haskell2010
--  ghc-options: -threaded -Wall -Wno-name-shadowing -Wno-type-defaults
--  hs-source-dirs: ./example-shell
--  main-is: ShellRC.hs
--  type: exitcode-stdio-1.0
