cabal-version:      3.0
name:               procex
version:            0.3.3
synopsis:
  Ergonomic process launching with extreme flexibility and speed

description:
  procex is a library for launching unix processes, that DOES NOT wrap createProcess.
  It interfaces directly with vfork and execve, and closes fds efficiently using
  the new close_range Linux syscall (or close if not available).
  The syntax for launching processes is clean, concise, and flexible, mimicking sh.

bug-reports:        https://github.com/L-as/procex
license-files:      LICENSE
license:            MIT
author:             Las Safin
maintainer:         me@las.rs
category:           System, Shell
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/L-as/procex

flag develop
  description: develop
  default: False
  manual: True

library
  exposed-modules:
    Procex.Core
    Procex.Execve
    Procex.Prelude
    Procex.Process
    Procex.Quick
    Procex.Shell
    Procex.Shell.Labels

  default-extensions:
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLists
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeOperators
    DerivingStrategies

  build-depends:
    , async        ^>=2.2.3
    , base         >=4.14.1  && <5
    , bytestring   >=0.10.12 && <0.12
    , containers   ^>=0.6.2
    , deepseq      ^>=1.4.4
    , unix         >=2.7     && <2.9
    , utf8-string  ^>=1.0.2

  default-language:   Haskell2010
  if flag(develop)
    ghc-options:
      -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
      -Werror -Wno-implicit-prelude -Wno-name-shadowing -Wno-safe -Wno-unsafe
      -Wno-missing-safe-haskell-mode -Wno-missing-local-signatures
      -Wno-prepositive-qualified-module -Wno-missing-import-lists
      -Wno-all-missed-specializations -Wno-unticked-promoted-constructors
      -Wno-name-shadowing
      -fprint-explicit-kinds -fprint-explicit-coercions
      -fprint-equality-relations -fprint-explicit-foralls
  else
    ghc-options: -Wall -Wno-name-shadowing
  c-sources:          cbits/glue.c

test-suite example
  type:             exitcode-stdio-1.0
  main-is:          example.hs
  default-language: Haskell2010
  build-depends:
    , async
    , base
    , bytestring
    , hspec       >=2.7
    , procex
    , unix

  ghc-options:      -threaded -Wall -Wno-name-shadowing

--Test-Suite shell
--  build-depends:
--    base,
--    procex,
--    async,
--    utf8-string,
--    replace-megaparsec ^>= 1.4.4,
--    bytestring,
--    directory
--  default-extensions:
--    ExtendedDefaultRules,
--    OverloadedStrings
--  default-language: Haskell2010
--  ghc-options: -threaded -Wall -Wno-name-shadowing -Wno-type-defaults
--  hs-source-dirs: ./example-shell
--  main-is: ShellRC.hs
--  type: exitcode-stdio-1.0
